# hawthorn

./: .gitignore  CMakeLists.txt  Makefile  README  clibrary.c  debug.c  expression.c  hawthorn  hawthorn.c  hawthorn.h  heap.c  include.c  interpreter.h  lex.c  parse.c  picoc  picoc.c  picoc.h  platform.c  platform.h  table.c  type.c  variable.c
.github/workflows/: c-cpp.yml  esp-idf.yml  liunx.yml
cstdlib/: ctype.c  errno.c  math.c  stdbool.c  stdio.c  stdlib.c  string.c  time.c  unistd.c
msvc/picoc/: picoc.vcxproj
platform/: library_ffox.c  library_msvc.c  library_srv1.c  library_surveyor.c  library_unix.c  platform_ffox.c  platform_msvc.c  platform_surveyor.c  platform_unix.c
tests/: 00_assignment.c  00_assignment.expect  00_assignment.output  01_comment.c  02_printf.c  02_printf.expect  03_struct.c  03_struct.expect  04_for.c  05_array.c  06_case.c  06_case.expect  07_function.c  07_function.expect  08_while.c  08_while.expect  09_do_while.c  10_pointer.c  10_pointer.expect  11_precedence.c  11_precedence.expect  12_hashdefine.c  12_hashdefine.expect  13_integer_literals.c  13_integer_literals.expect  14_if.c  14_if.expect  15_recursion.c  15_recursion.expect  16_nesting.c  17_enum.c  18_include.c  19_pointer_arithmetic.c  19_pointer_arithmetic.expect  20_pointer_comparison.c  20_pointer_comparison.expect  21_char_array.c  21_char_array.expect  22_floating_point.c  22_floating_point.expect  (+78 more)
tests/csmith/: Makefile  rand0.c  rand0.expect  rand1.c  rand1.expect  rand10.c  rand10.expect  rand100.c  rand101.c  rand101.expect  rand102.c  rand102.expect  rand103.c  (+201 more)
(+11 files in other folders)
